<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        />
    <EditText
        android:id="@+id/make_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="name"
        android:hint="@string/vehicle_make"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/model_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="name"
        android:hint="@string/vehicle_model"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:entries="@array/fuel_type"
        android:minHeight="48dp"
        android:padding="5dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_transmission"
        android:onClick="radio_button_click" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automatic_transmission"
        android:onClick="radio_button_click" />
        </RadioGroup>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:contentDescription="@string/rating_bar"
        android:numStars="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_rating"
        android:layout_margin="20dp"
        android:onClick="onSubmitButtonClick"/>



   </LinearLayout>
</ScrollView>